--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.14.0",
     "@reduxjs/toolkit": "^2.9.0",
     "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "install": "^0.13.0",
     "npm": "^11.6.2",
     "react": "^19.1.1",
